{{$NEXT}}

1.05     2019-11-29

- Fix check for whether we're being run in CI in the Pod::Weaver bundle as
  well. Without this the bundle generated bad POD with an empty `L<>` tag.


1.04     2019-11-28

- Fix check for whether we're being run in CI.


1.03     2019-11-28

- Don't include GitHub::Meta when running under Azure Pipelines.


1.02     2019-11-09

- And more tweaks to the generated CONTRIBUTING.md file.


1.01     2018-08-01

- More tweaks to the generated CONTRIBUTING.md file.


1.00     2018-07-30

- More tweaks and typo fixes in the generated CONTRIBUTING.md file.


0.99     2018-06-21

- Add a plugin to generate a CODE_OF_CONDUCT.md and copy this into the repo
  after release. The text is from
  https://www.contributor-covenant.org/version/1/4/code-of-conduct.html.


0.98     2018-06-09

- More tweaks to the CONTRIBUTING.md file.


0.97     2018-06-09

- Fixed a small issue in the generated CONTRIBUTING.md file for distros.


0.96     2018-06-09

- Work around a bug in MakeMaker::Awesome that causes it to not include code
  in the Makefile.PL to indicate the minimum required version of Perl when one
  exists. See
  https://github.com/avar/dist-zilla-plugin-makemaker-awesome/pull/9 for more
  details.


0.95     2018-05-27

- Require version 0.45 of the GitHub plugins and always authenticate when
  getting repo metadata.


0.94     2018-05-26

- Fix my broken code.


0.93     2018-05-26

- Make it possible to only add the compiler warning flags with a minimum Perl
  version. Some modules I maintain will not compile warning-free on older
  Perls because of warnings from the Perl core headers.


0.92     2018-05-26

- Require Devel::PPPort 3.42. The included in the core with older perl
  versions leads to warnings when compiling XS code with newer Perls.


0.91     2018-05-26

- The generated Makefile.PL for XS modules will add "-Wall" and "-Werror" as
  a compiler flags when AUTHOR_TESTING is true.


0.90     2018-05-13
