@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+- Allow an existing COPYRIGHT section to override the section generated by
+  Pod::Weaver. This fixes https://github.com/houseabsolute/Specio/issues/17.
+
+
 1.05     2019-11-29
 
 - Fix check for whether we're being run in CI in the Pod::Weaver bundle as
